--- a/app/src/main/res/drawable/rating_bar_drawable.xml
+++ b/app/src/main/res/drawable/rating_bar_drawable.xml
@@ -8,7 +8,7 @@
     <item android:id="@android:id/progress">
         <clip>
             <shape android:shape="rectangle">
-                <solid android:color="#FF0000" />
+                <solid android:color="#4720AD" />
             </shape>
         </clip>
     </item>
