--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -48,7 +48,7 @@
                     <ImageView
                         android:layout_width="40dp"
                         android:layout_height="40dp"
-                        android:src="@drawable/icon_menu" />
+                        android:src="@drawable/ic_logout" />
 
                     <TextView
                         android:layout_width="wrap_content"
