--- a/app/src/main/res/layout/hunter_activity_detail.xml
+++ b/app/src/main/res/layout/hunter_activity_detail.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/demonslayer"
+        android:src="@drawable/hunter_bg"
         android:alpha="0.3" />
 
     <!-- Overlaying content -->
@@ -34,8 +34,10 @@
                     android:id="@+id/header_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/demonslayer" />
+                    android:scaleType="fitCenter"
+                    android:adjustViewBounds="true"
+                    android:rotation="270"
+                    android:src="@drawable/hunter" />
 
                 <!-- Foreground background color (with opacity maybe) -->
                 <View
@@ -91,11 +93,11 @@
             android:background="@android:color/transparent"
             app:tabBackground="@drawable/hunter_tab_background"
             app:tabGravity="fill"
+            app:tabIndicatorHeight="0dp"
             app:tabMode="fixed"
             app:tabRippleColor="@android:color/transparent"
-            app:tabTextColor="@color/demon_tab_text_color"
             app:tabSelectedTextColor="@android:color/white"
-            app:tabIndicatorHeight="0dp" />
+            app:tabTextColor="@color/demon_tab_text_color" />
 
 
         <!-- ViewPager2 -->
