--- a/app/src/main/res/layout/jjk_activity_detail.xml
+++ b/app/src/main/res/layout/jjk_activity_detail.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/demonslayer"
+        android:src="@drawable/jjk_bg"
         android:alpha="0.3" />
 
     <!-- Overlaying content -->
@@ -32,10 +32,12 @@
                 <!-- ImageView as background -->
                 <ImageView
                     android:id="@+id/header_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/demonslayer" />
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:scaleType="fitCenter"
+                    android:adjustViewBounds="true"
+
+                    android:src="@drawable/jjk" />
 
                 <!-- Foreground background color (with opacity maybe) -->
                 <View
