--- a/app/src/main/res/layout/one_activity_detail.xml
+++ b/app/src/main/res/layout/one_activity_detail.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/demonslayer"
+        android:src="@drawable/one_bg"
         android:alpha="0.3" />
 
     <!-- Overlaying content -->
@@ -34,8 +34,10 @@
                     android:id="@+id/header_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/demonslayer" />
+                    android:scaleType="fitCenter"
+                    android:adjustViewBounds="true"
+                    android:rotation="270"
+                    android:src="@drawable/one" />
 
                 <!-- Foreground background color (with opacity maybe) -->
                 <View
