--- a/app/src/main/res/layout/hunter_fragment_review.xml
+++ b/app/src/main/res/layout/hunter_fragment_review.xml
@@ -46,7 +46,7 @@
                         android:layout_weight="1"
                         android:progress="90"
                         android:max="100"
-                        android:progressDrawable="@drawable/rating_bar_drawable"
+                        android:progressDrawable="@drawable/hunte_ratingbar_drawable"
                         style="?android:attr/progressBarStyleHorizontal" />
                 </LinearLayout>
 
@@ -72,7 +72,7 @@
                         android:layout_weight="1"
                         android:progress="60"
                         android:max="100"
-                        android:progressDrawable="@drawable/rating_bar_drawable"
+                        android:progressDrawable="@drawable/hunte_ratingbar_drawable"
                         style="?android:attr/progressBarStyleHorizontal" />
                 </LinearLayout>
 
@@ -98,7 +98,7 @@
                         android:layout_weight="1"
                         android:progress="50"
                         android:max="100"
-                        android:progressDrawable="@drawable/rating_bar_drawable"
+                        android:progressDrawable="@drawable/hunte_ratingbar_drawable"
                         style="?android:attr/progressBarStyleHorizontal" />
                 </LinearLayout>
 
@@ -124,7 +124,7 @@
                         android:layout_weight="1"
                         android:progress="40"
                         android:max="100"
-                        android:progressDrawable="@drawable/rating_bar_drawable"
+                        android:progressDrawable="@drawable/hunte_ratingbar_drawable"
                         style="?android:attr/progressBarStyleHorizontal" />
                 </LinearLayout>
 
@@ -150,7 +150,7 @@
                         android:layout_weight="1"
                         android:progress="30"
                         android:max="100"
-                        android:progressDrawable="@drawable/rating_bar_drawable"
+                        android:progressDrawable="@drawable/hunte_ratingbar_drawable"
                         style="?android:attr/progressBarStyleHorizontal" />
                 </LinearLayout>
 
@@ -448,7 +448,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="24dp"
-            android:backgroundTint="@android:color/holo_purple"
+            android:backgroundTint="@android:color/holo_green_light"
             android:text="Add"
             android:textColor="@android:color/white" />
     </LinearLayout>
