--- a/app/src/main/res/layout/one_activity_detail.xml
+++ b/app/src/main/res/layout/one_activity_detail.xml
@@ -34,10 +34,9 @@
                     android:id="@+id/header_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scaleType="fitCenter"
-                    android:adjustViewBounds="true"
-                    android:rotation="270"
-                    android:src="@drawable/one" />
+                    android:layout_gravity="center"
+                    android:adjustViewBounds="false"
+                    android:src="@drawable/one1" />
 
                 <!-- Foreground background color (with opacity maybe) -->
                 <View
