--- a/app/src/main/res/drawable/jjk_tab_background.xml
+++ b/app/src/main/res/drawable/jjk_tab_background.xml
@@ -3,7 +3,7 @@
     <!-- Selected tab background -->
     <item android:state_selected="true">
         <shape android:shape="rectangle">
-            <solid android:color="#4720AD"/> <!-- Purple fill -->
+            <solid android:color="#D41919"/> <!-- Purple fill -->
             <corners android:radius="50dp" />
             <stroke
                 android:width="2dp"
