--- a/app/src/main/res/layout/aboutus.xml
+++ b/app/src/main/res/layout/aboutus.xml
@@ -106,7 +106,7 @@
                 <ImageView
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:src="@drawable/ic_home" />
+                    android:src="@drawable/emo3" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -129,7 +129,7 @@
                 <ImageView
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:src="@drawable/ic_home" />
+                    android:src="@drawable/emo2" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -154,7 +154,7 @@
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:src="@drawable/ic_home" />
+                android:src="@drawable/emo1" />
 
             <TextView
                 android:layout_width="wrap_content"
