--- a/app/src/main/res/layout/demon_fragment_clip.xml
+++ b/app/src/main/res/layout/demon_fragment_clip.xml
@@ -40,21 +40,21 @@
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@drawable/slide2"
+                android:src="@drawable/demon1"
                 android:scaleType="centerCrop"
                 android:layout_margin="4dp"/>
 
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@drawable/slide3"
+                android:src="@drawable/demon2"
                 android:scaleType="centerCrop"
                 android:layout_margin="4dp"/>
 
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@drawable/slide4"
+                android:src="@drawable/demon3"
                 android:scaleType="centerCrop"
                 android:layout_margin="4dp"/>
         </LinearLayout>
