--- a/app/src/main/res/layout/hunter_activity_detail.xml
+++ b/app/src/main/res/layout/hunter_activity_detail.xml
@@ -37,7 +37,7 @@
                     android:scaleType="centerCrop"
                     android:rotation="270"
                     android:adjustViewBounds="true"
-                    android:src="@drawable/hunter" />
+                    android:src="@drawable/hunterlist" />
 
                 <!-- Foreground background color (with opacity maybe) -->
                 <View
