--- a/app/src/main/res/layout/demon_activity_detail.xml
+++ b/app/src/main/res/layout/demon_activity_detail.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/demonslayer"
+        android:src="@drawable/demonbg"
         android:alpha="0.3" />
 
     <!-- Overlaying content -->
@@ -35,7 +35,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/demonslayer" />
+                    android:src="@drawable/demon" />
 
                 <!-- Foreground background color (with opacity maybe) -->
                 <View
