--- a/app/src/main/res/layout/dialog_add_review.xml
+++ b/app/src/main/res/layout/dialog_add_review.xml
@@ -17,7 +17,7 @@
             android:id="@+id/imgProfile"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/ic_profile" />
+            android:src="@drawable/ic_face" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -38,7 +38,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:numStars="5"
-                android:stepSize="1" />
+                android:stepSize="1"
+                android:progressDrawable="@drawable/rating_star"/>
         </LinearLayout>
     </LinearLayout>
 
