--- a/app/src/main/res/layout/demon_activity_detail.xml
+++ b/app/src/main/res/layout/demon_activity_detail.xml
@@ -93,7 +93,7 @@
             app:tabGravity="fill"
             app:tabMode="fixed"
             app:tabRippleColor="@android:color/transparent"
-            app:tabTextColor="@color/demon_tab_text_color"
+            app:tabTextColor="@color/white"
             app:tabSelectedTextColor="@android:color/white"
             app:tabIndicatorHeight="0dp" />
 
