--- a/app/src/main/res/layout/haikyu_activity_detail.xml
+++ b/app/src/main/res/layout/haikyu_activity_detail.xml
@@ -32,11 +32,11 @@
                 <!-- ImageView as background -->
                 <ImageView
                     android:id="@+id/header_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="fitCenter"
+                    android:layout_width="410dp"
+                    android:layout_height="wrap_content"
+                    android:scaleY="1.3"
+                    android:scaleX="1.3"
                     android:adjustViewBounds="true"
-                    android:rotation="270"
                     android:src="@drawable/haikyuu" />
 
 
@@ -96,7 +96,7 @@
             app:tabGravity="fill"
             app:tabMode="fixed"
             app:tabRippleColor="@android:color/transparent"
-            app:tabTextColor="@color/demon_tab_text_color"
+            app:tabTextColor="@color/white"
             app:tabSelectedTextColor="@android:color/white"
             app:tabIndicatorHeight="0dp" />
 
