--- a/app/src/main/res/layout/hunter_fragment_review.xml
+++ b/app/src/main/res/layout/hunter_fragment_review.xml
@@ -230,7 +230,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Saya menontonnya kemarin. Jujur saja..."
+                        android:text="Saya menontonnya kemarin. Jujur saja, hasilnya melebihi ekspektasi saya, seperti biasa. Saya sangat mencintai karya ini."
                         android:textColor="@android:color/black"
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -298,7 +298,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Saya menontonnya kemarin. Jujur saja..."
+                        android:text="Saya menontonnya kemarin. Jujur saja, hasilnya melebihi ekspektasi saya, seperti biasa. Saya sangat mencintai karya ini."
                         android:textColor="@android:color/black"
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -366,7 +366,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Saya menontonnya kemarin. Jujur saja..."
+                        android:text="Saya menontonnya kemarin. Jujur saja, hasilnya melebihi ekspektasi saya, seperti biasa. Saya sangat mencintai karya ini."
                         android:textColor="@android:color/black"
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -434,7 +434,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Saya menontonnya kemarin. Jujur saja..."
+                        android:text="Saya menontonnya kemarin. Jujur saja, hasilnya melebihi ekspektasi saya, seperti biasa. Saya sangat mencintai karya ini."
                         android:textColor="@android:color/black"
                         android:textSize="14sp" />
                 </LinearLayout>
