--- a/app/src/main/res/layout/item_anime.xml
+++ b/app/src/main/res/layout/item_anime.xml
@@ -4,13 +4,12 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:background="@drawable/rounded_image"
-    android:padding="16dp"
-    android:layout_margin="8dp">
+    android:layout_marginBottom="30dp">
 
     <ImageView
         android:id="@+id/animeImage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="115dp"
+        android:layout_height="115dp"
         android:scaleType="centerCrop"
         android:src="@drawable/slide1" />
 
@@ -32,19 +31,31 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/Rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="4.8"
+                android:textSize="12sp"
+                android:textColor="#000000"
+                android:drawableLeft="@drawable/ic_star"
+                android:drawablePadding="4dp"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
+                android:paddingTop="2dp"
+                android:paddingBottom="2dp"
+                android:background="@drawable/bg_rating"
+                android:gravity="center_vertical"/>
+
             <TextView
                 android:id="@+id/Genre"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Genre"
                 android:textSize="14sp"
-                android:paddingEnd="12sp"/>
-            <TextView
-                android:id="@+id/Rating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Rating"
-                android:textSize="14sp"/>
+                android:layout_marginStart="10dp"/>
+
         </LinearLayout>
 
         <TextView
@@ -52,8 +63,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Description"
-            android:textSize="14sp"
-            android:maxLines="2"
+            android:textSize="11sp"
             android:ellipsize="end"/>
     </LinearLayout>
 </LinearLayout>
