--- a/app/src/main/res/layout/demon_fragment_clip.xml
+++ b/app/src/main/res/layout/demon_fragment_clip.xml
@@ -26,7 +26,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:src="@drawable/slide1"
+            android:src="@drawable/demon_banner"
             android:scaleType="centerCrop"
             android:layout_marginBottom="8dp"/>
 
