--- a/app/src/main/res/layout/demon_fragment_review.xml
+++ b/app/src/main/res/layout/demon_fragment_review.xml
@@ -451,7 +451,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="24dp"
-            android:backgroundTint="@android:color/holo_purple"
+            android:backgroundTint="#FF4720AD"
             android:text="Add"
             android:textColor="@android:color/white" />
     </LinearLayout>
