--- a/app/src/main/res/layout/haikyu_fragment_clip.xml
+++ b/app/src/main/res/layout/haikyu_fragment_clip.xml
@@ -33,7 +33,7 @@ Durasi: Sekitar 24 menit per episode (Total 85 episode)
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:src="@drawable/slide1"
+            android:src="@drawable/haikyu_banner"
             android:scaleType="centerCrop"
             android:layout_marginBottom="8dp"/>
 
