--- a/app/src/main/res/layout/hunter_fragment_clip.xml
+++ b/app/src/main/res/layout/hunter_fragment_clip.xml
@@ -32,7 +32,7 @@ Durasi: Sekitar 23 menit per episode (Total 148 episode)"
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:src="@drawable/slide1"
+            android:src="@drawable/hunter_banner"
             android:scaleType="centerCrop"
             android:layout_marginBottom="8dp"/>
 
