--- a/app/src/main/res/layout/hunter_fragment_review.xml
+++ b/app/src/main/res/layout/hunter_fragment_review.xml
@@ -448,7 +448,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="24dp"
-            android:backgroundTint="@android:color/holo_green_light"
+            android:backgroundTint="#FF31A423"
             android:text="Add"
             android:textColor="@android:color/white" />
     </LinearLayout>
