--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -109,6 +109,6 @@
             android:textColor="@color/black"
             android:textAllCaps="false"
             android:textSize="16sp"
-            android:background="@drawable/button_bg"/>
+            android:backgroundTint="@android:color/white"/>
     </LinearLayout>
 </FrameLayout>
